<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="166dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/mypic" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309">

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:ems="5"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/studentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/stdID"
            android:ems="5"
            android:hint="@string/stdID"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_outline"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <RadioButton
            android:id="@+id/rBtnA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/classA"
            android:textColor="@color/colorAccent"

            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="155dp" />

        <RadioButton
            android:id="@+id/rBtnB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/classB"
            android:textColor="@color/colorAccent"

            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_outline"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">

        <RadioButton
            android:id="@+id/rBtnSamsung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:text="@string/samsung"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/rBtnApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:text="@string/apple"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/rBtnEtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:text="@string/etcetra"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_outline"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.630">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:text="@string/easy"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:text="@string/normal"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/toogle_widget_background"
            android:button="@null"
            android:text="@string/hard"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

    <TextView
        android:id="@+id/third_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qthree"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/fourth_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qfour"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/second_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qTwo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/first_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qOne"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#1a237e"
        android:textSize="20dp"
        android:ems="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.718" />

</androidx.constraintlayout.widget.ConstraintLayout>